<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hint_name" />
         </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

             <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/hint_phone" />
        </android.support.design.widget.TextInputLayout>
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_year"
                android:paddingTop="5dp"/>



            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:id="@+id/radio"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/radio_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    />

                <RadioButton android:id="@+id/radio_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    />

                <RadioButton android:id="@+id/radio_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3" />

                <RadioButton android:id="@+id/radio_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />
            </RadioGroup>

         </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Course"/>

        <Spinner
        android:id="@+id/course_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
            android:paddingTop="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="College"
                android:paddingTop="50dp"/>

            <Spinner
                android:id="@+id/college_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"/>

            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="How did you come to know about this workshop"
                android:paddingTop="20dp"/>

            <CheckBox android:id="@+id/checkbox_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_facebook" />

            <CheckBox android:id="@+id/checkbox_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_whatsapp" />

            <CheckBox android:id="@+id/checkbox_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_website" />

            <CheckBox android:id="@+id/checkbox_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_student"
                android:onClick="expand_student"/>

            <EditText
                android:id="@+id/std_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="Enter Student Ambassador id "/>

            <CheckBox android:id="@+id/checkbox_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_others"
                android:onClick="expand_other"/>

            <EditText
                android:id="@+id/other_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="How did you come to know ?"
                />

        </LinearLayout>

        <Button android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
            android:onClick="assign_values"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="200px"
            android:text="               " />

    </LinearLayout>


</ScrollView>
